// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IdleLoansList tests should load the details component 1`] = `
<Overridable(Loader)
  isLoading={false}
>
  <Error
    FallbackComponent={[Function]}
    boundary={false}
    error={Object {}}
    onUIError={null}
  >
    <ResultsTable
      columns={
        Array [
          Object {
            "field": "",
            "formatter": [Function],
            "title": "",
          },
          Object {
            "field": "metadata.pid",
            "title": "ID",
          },
          Object {
            "field": "metadata.patron_pid",
            "title": "Patron ID",
          },
          Object {
            "field": "metadata.document_pid",
            "title": "Document ID",
          },
          Object {
            "field": "metadata.request_start_date",
            "formatter": [Function],
            "title": "Request start date",
          },
        ]
      }
      currentPage={1}
      data={Array []}
      fixed={false}
      headerActionComponent={null}
      name="idle loan requests"
      paginationComponent={null}
      renderEmptyResultsElement={null}
      seeAllComponent={
        <SeeAllButton
          disabled={false}
          fluid={false}
          to="/backoffice/loans?q=(state:(PENDING) AND _updated:%7B*%20TO%202019-10-18%7D)"
        />
      }
      showAllResults={false}
      showMaxRows={5}
      singleLine={true}
      subtitle="Loan requests pending since more than 10 days."
      title="Idle loan requests"
      totalHitsCount={0}
      totalHitsCounts={0}
    />
  </Error>
</Overridable(Loader)>
`;

exports[`IdleLoansList tests should render show a message with no loans 1`] = `
<IdleLoansList
  data={
    Object {
      "hits": Array [],
      "total": 0,
    }
  }
  error={Object {}}
  fetchIdlePendingLoans={[Function]}
  isLoading={false}
  showMaxEntries={5}
>
  <Overridable(Loader)
    isLoading={false}
  >
    <Loader
      isLoading={false}
    >
      <Overridable
        id="Loader.layout"
        isLoading={false}
      >
        <Error
          FallbackComponent={[Function]}
          boundary={false}
          error={Object {}}
          onUIError={null}
        >
          <ResultsTable
            columns={
              Array [
                Object {
                  "field": "",
                  "formatter": [Function],
                  "title": "",
                },
                Object {
                  "field": "metadata.pid",
                  "title": "ID",
                },
                Object {
                  "field": "metadata.patron_pid",
                  "title": "Patron ID",
                },
                Object {
                  "field": "metadata.document_pid",
                  "title": "Document ID",
                },
                Object {
                  "field": "metadata.request_start_date",
                  "formatter": [Function],
                  "title": "Request start date",
                },
              ]
            }
            currentPage={1}
            data={Array []}
            fixed={false}
            headerActionComponent={null}
            name="idle loan requests"
            paginationComponent={null}
            renderEmptyResultsElement={null}
            seeAllComponent={
              <SeeAllButton
                disabled={false}
                fluid={false}
                to="/backoffice/loans?q=(state:(PENDING) AND _updated:%7B*%20TO%202019-10-18%7D)"
              />
            }
            showAllResults={false}
            showMaxRows={5}
            singleLine={true}
            subtitle="Loan requests pending since more than 10 days."
            title="Idle loan requests"
            totalHitsCount={0}
            totalHitsCounts={0}
          >
            <Grid>
              <div
                className="ui grid"
              >
                <GridRow>
                  <div
                    className="row"
                  >
                    <GridColumn
                      verticalAlign="middle"
                      width={16}
                    >
                      <div
                        className="middle aligned sixteen wide column"
                      >
                        <Header
                          as="h3"
                          content="Idle loan requests"
                          subheader="Loan requests pending since more than 10 days."
                        >
                          <h3
                            className="ui header"
                          >
                            Idle loan requests
                            <HeaderSubheader
                              content="Loan requests pending since more than 10 days."
                            >
                              <div
                                className="sub header"
                              >
                                Loan requests pending since more than 10 days.
                              </div>
                            </HeaderSubheader>
                          </h3>
                        </Header>
                      </div>
                    </GridColumn>
                    <GridColumn
                      textAlign="right"
                      width={8}
                    >
                      <div
                        className="right aligned eight wide column"
                      />
                    </GridColumn>
                  </div>
                </GridRow>
              </div>
            </Grid>
            <Message
              data-test="no-results"
              icon={true}
              info={true}
            >
              <div
                className="ui icon info message"
                data-test="no-results"
              >
                <MessageContent>
                  <div
                    className="content"
                  >
                    <MessageHeader>
                      <div
                        className="header"
                      >
                        No results found
                      </div>
                    </MessageHeader>
                    There are no 
                    idle loan requests
                    .
                  </div>
                </MessageContent>
              </div>
            </Message>
          </ResultsTable>
        </Error>
      </Overridable>
    </Loader>
  </Overridable(Loader)>
</IdleLoansList>
`;
